<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Subway Tooter</string>
    <string name="action_settings">Settings</string>
    <string name="account_add">Add an account</string>
    <string name="instance">Server</string>
    <string name="user_mail_address">E-mail</string>
    <string name="user_password">Password</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="instance_not_specified">Server not specified</string>
    <string name="mail_not_specified">E-mail not specified</string>
    <string name="password_not_specified">Password not specified</string>
    <string name="network_error">Network error.</string>
    <string name="error_response">Error response.</string>
    <string name="api_error">API error. %1$s</string>
    <string name="register_app_to_server">Registering this app to %1$s…</string>
    <string name="request_access_token">Requesting access token…</string>
    <string name="request_api">Acquiring: %1$s %2$s</string>
    <string name="reading_api">Reading: %1$s %2$s</string>
    <string name="column_empty">Use the bottom left menu button to add a column</string>
    <string name="home">Home</string>
    <string name="local_timeline">Local timeline</string>
    <string name="federate_timeline">Federated timeline</string>
    <string name="login_required">Please set your access token from the account settings.</string>
    <string name="cancelled">Cancelled</string>
    <string name="account_pick">Select an account</string>
    <string name="account_confirmed">Account confirmed.</string>
    <string name="reply">Reply</string>
    <string name="default_">Default</string>
    <string name="more">More</string>
    <string name="close_column">Close the column</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="reload">Reload</string>
    <string name="favourites">Favourites</string>
    <string name="notifications">Notifications</string>
    <string name="reports">Reports</string>
    <string name="your_statuses">Your profile</string>
    <string name="statuses_of">Profile of %1$s</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="statuses">Statuses</string>
    <string name="hide">Hide</string>
    <string name="nsfw">NSFW</string>
    <string name="tap_to_show">Tap to show</string>
    <string name="show">Show</string>
    <string name="act_post">Composite post</string>
    <string name="content_warning">Content warning</string>
    <string name="please_add_account">You need to make an account to create post.</string>
    <string name="not_selected">(not selected)</string>
    <string name="content_warning_hint">Write your warning here</string>
    <string name="content_hint">The content of your post</string>
    <string name="status">Post</string>
    <string name="list_empty">List empty</string>
    <string name="post_from">Post from</string>
    <string name="choose_account">Choose your account</string>
    <string name="response_not_json">API response is not JSON.</string>
    <string name="attachment_too_many">up to 4 files is allowed.</string>
    <string name="account_select_please">Select the account</string>
    <string name="login_failed">Could not log in.</string>
    <string name="file_size_too_big">The file is bigger than the limit of %1$dMB.</string>
    <string name="visibility_public">Public</string>
    <string name="visibility_unlisted">Unlisted</string>
    <string name="visibility_private">Followers-only</string>
    <string name="visibility_direct">Direct</string>
    <string name="visibility_web_setting">Trace web app setting</string>
    <string name="visibility_account_setting">Trace account setting</string>
    <string name="visibility_local_public">Public (local)</string>
    <string name="visibility_local_home">Home (local)</string>
    <string name="visibility_local_followers">Followers-only (local)</string>
    <string name="visibility_local_unlisted">Unlisted (local)</string>
    <string name="choose_visibility">Choose visibility</string>
    <string name="confirm_delete_attachment">Remove this attachment?</string>
    <string name="post_error_contents_empty">Please input content text.</string>
    <string name="post_error_contents_warning_empty">Please input content warning text.</string>
    <string name="wait_previous_operation">Please wait until last operation is over.</string>
    <string name="cant_remove_boost_while_favourited">Can\'t remove boost while favourited</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_boost_from">Boost this status from %1$s ? It\'s shown to all followers and on your profile page.</string>
    <string name="confirm_unboost_from">Unboost this status from %1$s ?</string>
    <string name="confirm_favourite_from">Favourite this status from %1$s ? Notification will be sent to its author.</string>
    <string name="confirm_unfavourite_from">Unfavourite this status from %1$s ?</string>
    <string name="confirm_unbookmark_from">Unbookmark this status from %1$s ?</string>
    <string name="display_name_favourited_by">%1$s favourited</string>
    <string name="display_name_boosted_by">%1$s boosted</string>
    <string name="display_name_replied_by">%1$s replied</string>
    <string name="display_name_mentioned_by">%1$s mentioned</string>
    <string name="display_name_voted_by">%1$s voted</string>
    <string name="display_name_follow_request_by">%1$s sent follow request</string>
    <string name="display_name_follow_request_accepted_by">%1$s accepted your follow request</string>
    <string name="display_name_quoted_by">%1$s quoted</string>
    <string name="display_name_posted_by">%1$s posted</string>
    <string name="display_name_updates_post">%1$s updates the post</string>
    <string name="display_name_references_post">%1$s references your post</string>
    <string name="display_name_reaction_by">%1$s reactioned</string>
    <string name="display_name_followed_by">%1$s is following you</string>
    <string name="display_name_unfollowed_by">%1$s unfollowed you</string>
    <string name="display_name_signed_up">%1$s signed up on your server</string>
    <string name="display_name_report">%1$s reported.</string>
    <string name="account">Account</string>
    <string name="account_setting">Account settings</string>
    <string name="setting">Settings</string>
    <string name="app_setting">App settings</string>
    <string name="column_list">Columns list</string>
    <string name="update_access_token">Update the access token</string>
    <string name="account_remove">Remove this account</string>
    <string name="actions">Actions</string>
    <string name="default_status_visibility">Default visibility</string>
    <string name="confirm_before_boost">Confirm before boosting</string>
    <string name="sensitive_content_default_open">Showing sensitive attachments by default</string>
    <string name="cw_default_open">Expand CWed content by default</string>
    <string name="user">User</string>
    <string name="confirm_account_remove">This account will be deleted and all the columns will be removed.\nAre you sure?</string>
    <string name="user_name_not_match">Username not match</string>
    <string name="access_token_updated_for">%1$s\'s access token was updated.</string>
    <string name="back_to_column_list">Go to column list when pressing \"Back\"</string>
    <string name="account_empty">Account is not set up.Please add account.</string>
    <string name="dont_confirm_before_close_column">Close column without confirmation</string>
    <string name="drag_handle">Drag handle</string>
    <string name="delete">Delete</string>
    <string name="column_list_desc">Swipe to delete. Long press to sort. Changes will be applied when reloading the view.</string>
    <string name="last_selection">Last selection</string>
    <string name="column_index">%1$d/%2$d</string>
    <string name="reply_to_this_status">Reply to this post:</string>
    <string name="cant_change_account_when_attachment_specified">You can\'t switch accounts while there is media attachment.</string>
    <string name="column">Column</string>
    <string name="conversation_view">Conversation view</string>
    <string name="conversation_around">Conversation around post:%1$s</string>
    <string name="instance_not_need_slash">Hostname of the server, without \'/\', \'\@\'.</string>
    <string name="mail_address_not_contains_at_mark">Use e-mails that contains \'\@\' and \'.\'</string>
    <string name="instance_hint">ex) mastodon.social</string>
    <string name="mail_hint">ex) your@e-mail.address</string>
    <string name="unfollow">Unfollow</string>
    <string name="follow_succeeded">Followed</string>
    <string name="search">Search</string>
    <string name="app_about">About this app</string>
    <string name="oss_license">OSS license</string>
    <string name="app_exit">Close the app</string>
    <string name="muted_users">Muted users</string>
    <string name="blocked_users">Blocked users</string>
    <string name="muted_app">Muted apps</string>
    <string name="follow_requests">Follow requests</string>
    <string name="save">Save</string>
    <string name="profile">Profile</string>
    <string name="muted_word">Banned words</string>
    <string name="blocked_domains">Blocked domains</string>
    <string name="toot_search">Post search</string>
    <string name="mastodon_search_portal">Mastodon search portal(JP)</string>
    <string name="email">E-mail</string>
    <string name="description">Description</string>
    <string name="lists">Lists</string>
    <string name="tootsearch">tootsearch (JP)</string>
    <string name="highlight_word">Highlight keyword</string>
    <string name="fav_muted_user">FBN disabled users</string>
    <string name="direct_messages">Direct messages</string>
    <string name="follow_suggestion">Follow suggestion</string>
    <string name="close_all_columns">Close all columns</string>
    <string name="keyword_filters">Keyword filters</string>
    <string name="filter_phrase">Phrase</string>
    <string name="filter_context">Filter contexts</string>
    <string name="filter_options">Options</string>
    <string name="filter_irreversible_long">Irreversible. Drop instead of hide. Filtered posts will disappear irreversibly, even if the filter is removed later.</string>
    <string name="filter_word_match_long">Whole word. Recommended to enable only phrases consisting of alphanumeric characters.</string>
    <string name="filter_expires_at">Expire</string>
    <string name="filter_home">home</string>
    <string name="filter_notification">notification</string>
    <string name="filter_public">public</string>
    <string name="filter_thread">conversation</string>
    <string name="misskey_hybrid_timeline_long">Social TL (Misskey)</string>
    <string name="endorse_set">Endorse in your profile</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="user_name_hint">ex.) MonaLisa</string>
    <string name="user_name">User name</string>
    <string name="email_hint">ex.) monalisa@gmail.com</string>
    <string name="password">Password</string>
    <string name="password_hint">Enter the password…</string>
    <string name="agree_terms">I agree to the terms of service</string>
    <string name="instance_rules">Server rules</string>
    <string name="scheduled_status_list">Scheduled status list</string>
    <string name="reason_create_account">Reason why you want to create an account on this server (optional)</string>
    <string name="update_mail_address">Update e-mail address</string>
    <string name="confirm_mail_description">After requesting resending confirm E-mail,\n- please check the mail on your mailer.\n- open confirm link in the mail.\n- close this dialog and reload column.</string>
</resources>