<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/svContent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"

        android:clipToPadding="false"
        android:fillViewport="true"
        android:paddingTop="12dp"
        android:paddingBottom="128dp"
        android:scrollbarStyle="outsideOverlay"
        tools:ignore="TooManyViews">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View style="@style/setting_divider" />

            <TextView
                style="@style/setting_row_label"
                android:labelFor="@+id/etPhrase"
                android:text="@string/filter_phrase" />

            <LinearLayout style="@style/setting_row_form">

                <EditText
                    android:id="@+id/etPhrase"
                    style="@style/setting_horizontal_stretch"
                    android:importantForAutofill="no"
                    android:inputType="text" />

            </LinearLayout>

            <View style="@style/setting_divider" />

            <TextView
                style="@style/setting_row_label"
                android:text="@string/filter_context" />

            <LinearLayout style="@style/setting_row_form">

                <CheckBox
                    android:id="@+id/cbContextHome"
                    style="@style/setting_horizontal_stretch"
                    android:checked="true"
                    android:text="@string/filter_home" />

            </LinearLayout>

            <LinearLayout style="@style/setting_row_form">

                <CheckBox
                    android:id="@+id/cbContextNotification"
                    style="@style/setting_horizontal_stretch"
                    android:checked="true"
                    android:text="@string/filter_notification" />

            </LinearLayout>

            <LinearLayout style="@style/setting_row_form">

                <CheckBox
                    android:id="@+id/cbContextPublic"
                    style="@style/setting_horizontal_stretch"
                    android:checked="true"
                    android:text="@string/filter_public" />

            </LinearLayout>

            <LinearLayout style="@style/setting_row_form">

                <CheckBox
                    android:id="@+id/cbContextThread"
                    style="@style/setting_horizontal_stretch"
                    android:checked="true"
                    android:text="@string/filter_thread" />

            </LinearLayout>

            <View style="@style/setting_divider" />

            <TextView
                style="@style/setting_row_label"
                android:text="@string/filter_options" />

            <LinearLayout style="@style/setting_row_form">

                <CheckBox
                    android:id="@+id/cbFilterIrreversible"
                    style="@style/setting_horizontal_stretch"
                    android:text="@string/filter_irreversible_long" />

            </LinearLayout>

            <LinearLayout style="@style/setting_row_form">

                <CheckBox
                    android:id="@+id/cbFilterWordMatch"
                    style="@style/setting_horizontal_stretch"
                    android:text="@string/filter_word_match_long" />

            </LinearLayout>

            <View style="@style/setting_divider" />

            <TextView
                style="@style/setting_row_label"
                android:text="@string/filter_expires_at" />

            <LinearLayout style="@style/setting_row_form">

                <TextView
                    android:id="@+id/tvExpire"
                    style="@style/setting_horizontal_stretch" />
            </LinearLayout>

            <LinearLayout style="@style/setting_row_form">

                <Spinner
                    android:id="@+id/spExpire"
                    style="@style/setting_horizontal_stretch" />
            </LinearLayout>

            <View style="@style/setting_divider" />

            <LinearLayout style="@style/setting_row_form">

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />
</LinearLayout>